# TinyLisp

./: CMakeLists.txt  Makefile  README.md
examples/: arithmetic.tl  cons.tl  factorial.tl  lambda.tl
src/: ASTNode.cpp  ASTNode.h  Closure.h  Compiler.cpp  Compiler.h  Environment.cpp  Environment.h  Error.h  FileTokenizer.cpp  FileTokenizer.h  Parser.cpp  Parser.h  Result.h  SECD.cpp  SECD.h  SECDInstruction.cpp  SECDInstruction.h  SECDRuntime.cpp  SECDRuntime.h  StdinTokenizer.cpp  StdinTokenizer.h  Token.h  Tokenizer.cpp  Tokenizer.h  Value.cpp  Value.h  main.cpp
